// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic container component matches the snapshot with no extra props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      },
      undefined,
    ]
  }
>
   null 
</View>
`;

exports[`generic container component matches the snapshot with style prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      },
      Object {
        "backgroundColor": "blue",
        "width": "30%",
      },
    ]
  }
>
  null
</View>
`;
